--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
         <ul>
             {% for post in site.posts %}
                 <li>
-                <h2><a href="jekylltest/{{ post.url }}">{{ post.title }}</a></h2>
+                <h2><a href="jekylltest{{ post.url }}">{{ post.title }}</a></h2>
                 <p class="littlemargin">{{ post.date | date: "%-d %B %Y" }}</p>
                 {{ post.excerpt }}
                 </li>
